syntax = "proto3";

package nebius.iam.v1;

import "google/api/field_behavior.proto";
import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import "google/rpc/status.proto";

option go_package = "github.com/ydb-platform/nbs/cloud/storage/core/tools/testing/access_service_new/mock/protos";

message Account {
  oneof type {
    UserAccount user_account = 1;
    ServiceAccount service_account = 2;
  }

  message UserAccount {
    string id = 1;
  }

  message ServiceAccount {
    string id = 1;
  }
}

message Permission {
  string name = 1;
}

message Resource {
  string id = 1;
}

message ResourcePath {
  repeated Resource path = 1;
}
